2000-07-13  Derry Hamilton <rasilon@tardis.ed.ac.uk>
	* config.h.in,configure,configure.in: configure now checks for the 
	32-bit type and defines kint32 and kuint32 as appropriate in 
	preparation for 64-bit kannel on Alpha and UltraSPARC since the
	compiler types int32 and uint32 are not supported everywhere.
	* gwlib/http.h: Added the function definition for 
	http_charset_accepted rather than leaving it to be implicitly
	defined.
	
2000-07-13  Yann Muller  <ymuller@3glab.com>

	* gw/smsc_at.c: removed two unused variables.
	
2000-07-12  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: Little bug fixes with variables:
	- no more empty	string before variable reference to string table
	- double $ won't eat a character after them
	- a little memory leak mentioned below corrected

2000-07-12  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_http.c: oops, return value for HTTP admin was not checked,
	now fixed

	* gw/bearerbox.c: added compiler options KANNEL_NO_SMS and
	KANNEL_NO_WAP

2000-07-11  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: Bug #86 fixed. A memory leak with $ characters 
	fixed. Another one still remains with mix of $ characters and 
	variables.

2000-07-11  Yann Muller  <ymuller@3glab.com>

	* doc/userguide/newconf.txt: Added configuration information to use
	a GSM modem as an SMSC.

2000-07-10  Yann Muller  <ymuller@3glab.com>

	* gw/smsc_at.c: now removes SMSC address at beginning of PDU sent
	by the Wavecom. Better handling of messages with UDH (no 7bit encoding
	of UDH yet).

2000-07-10  Kalle Marjola  <rpr@wapit.com>

	* gw/urltrans.c (find_translation): fixed string matching of
	sms-services.

2000-07-07  Tuomas Luttinen  <tuo@wapit.com>

	* configure: Now support for libxml 1.8.8 and 2.1.1.

	* gw/wml_compiler.c: Support for libxml version 2 and above now ready.

	* gw/wml_compiler.c (parse_attribute): Patch by Holger Casties applied
	to eliminate a segmentation fault with NULL pointer passed as a second 
	argument to strcmp.
